--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,150 @@
-/* Add CSS styling here */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+*{
+
+  padding:0;
+  margin:0;
+  max-width:100%;
+  border:1px ;
+}
+html{
+  font-size:62.5%;
+}
+body{
+  font-size:1.8rem;
+  color:#1b212c;
+  font-family: 'Suisseintl webs', Arial, sans-serif;
+}
+section{
+  padding:4% 0;
+}
+h1{
+  font-size:10rem;
+  font-family: 'Tiemposheadlineweb', 'Times New Roman', sans-serif;
+}
+h2{
+  font-family: cursive;
+  font-size: 5rem;
+}
+h3{
+  font-weight:bold;
+  font-size:1rem;
+}
+
+
+a{
+  
+  font-family: 'Suisseintl webm', sans-serif;
+  text-decoration:none;
+  margin: 0 10px;
+  border: 1px solid lightgray;
+  padding: 20px;
+  display: inline-block;
+  border-radius: 20px;
+  color: white;
+  text-decoration: none;
+  margin-bottom: 20px;
+  background-color:purple;
+}
+
+nav{
+  display:flex;
+  justify-content:space-between;
+  
+}
+
+.logo{
+  width:20%;
+}
+.links{
+  width:60%;
+  display:flex;
+  justify-content:space-evenly;
+  align-items:center;
+  
+ 
+}
+nav a{
+  font-size:1.4rem;
+}
+.gallery p{
+  font-size:1rem;
+}
+.container{
+  display:flex;
+  
+
+}
+.left, .right{
+  width:50%;
+  
+ 
+}
+.left{
+  display:flex;
+  justify-content:flex-end;
+}
+.left .content{
+  width:70%;
+  
+  
+}
+.right .content{
+  width:90%;
+}
+.stuff{
+  width:50%;
+  margin-top:4%;
+
+}
+
+
+#about{
+  display:flex;
+  
+  
+}
+#about .left{
+  display:flex;
+  justify-content:center;
+}
+.text{
+  width:40%;
+  margin:4% 0;
+  
+}
+
+.gallery{
+  display:flex;
+  justify-content:space-around;
+  }
+
+.imgBox{
+  width:18%;
+  text-align:center;
+  
+  
+}
+.imgBox img{
+  border-radius:10px;
+}
+
