--- a/style/index.css
+++ b/style/index.css
@@ -148,3 +148,31 @@ nav a{
   border-radius:10px;
 }
 
+@media (max-width: 500px){
+  header{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+  }
+ 
+}
+.logo{
+  width:10%;
+}
+
+.links header nav a {
+  margin: 0 20px;
+  padding: 20px;
+  display: inline-block;
+  border-radius: 20px;
+  color: white;
+  text-decoration: none;
+  margin-bottom: 10px;
+  display: flex;
+ 
+  
+
+  background-color:purple;
+  
+}
+
